messenger/bridge/base/0-messenger-namespace.yaml
#! 0-messenger-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: messenger
    labels:
        com.docker.compose.project: messenger
