messenger/bridge/base/client-service.yaml
# check if there is at least one published port

#! client-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: client-published
    namespace: messenger
    labels:
        com.docker.compose.project: messenger
        com.docker.compose.service: client
spec:
    selector:
        com.docker.compose.project: messenger
        com.docker.compose.service: client
    ports:
        - name: client-3000
          port: 3000
          protocol: TCP
          targetPort: client-3000

# check if there is at least one published port
