messenger/bridge/base/mongodb-service.yaml
#! mongodb-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mongodb-published
    namespace: messenger
    labels:
        com.docker.compose.project: messenger
        com.docker.compose.service: mongodb
spec:
    selector:
        com.docker.compose.project: messenger
        com.docker.compose.service: mongodb
    ports:
        - name: mongodb-27017
          port: 27017
          protocol: TCP
          targetPort: mongodb-27017

# check if there is at least one published port
