messenger/bridge/base/server-service.yaml
#! server-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: server-published
    namespace: messenger
    labels:
        com.docker.compose.project: messenger
        com.docker.compose.service: server
spec:
    selector:
        com.docker.compose.project: messenger
        com.docker.compose.service: server
    ports:
        - name: server-3001
          port: 3001
          protocol: TCP
          targetPort: server-3001
